# learn_scrap

./: Dockerfile  README.md  compose.yaml  env_sample  main.py  pyproject.toml  start.sh  test_extension_flow.py  test_supabase_conn.py
docs/dev/: README.md  architecture.md  configuration.md  deploy_gcp.md  deployment_overview.md  local_dev.md  plan
extension/: auth.html  auth.js  manifest.json  popup.html  popup.js
migrations/: 001_init.sql
src/app/: app.py
src/legendary_potato/api/: dependencies.py
src/legendary_potato/api/routes/: auth.py  auth_api.py  bookmarks.py  protected.py  public.py
src/legendary_potato/app/: main.py
src/legendary_potato/core/: config.py  db.py  migrations.py  rate_limit.py  security.py  tokens.py
src/legendary_potato/utils/services/: db_utils.py
